<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.po.majuperut.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background_register_blue" />

    <ImageView
        android:id="@+id/bus_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_bus" />

    <TextView
        android:id="@+id/title_majuperut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:layout_toEndOf="@+id/bus_image"
        android:text="@string/title_main"
        android:textColor="@color/colorRed"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/bus_image"
        android:layout_alignParentStart="true"
        android:id="@+id/LinearLayout"
        android:weightSum="1">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/username"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingLeft="10dp"
            android:paddingTop="17dp"
            android:text="@string/name_user"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/register_text"/>

        <TextView
            android:id="@+id/email_user"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingLeft="10dp"
            android:paddingTop="17dp"
            android:text="@string/email_user"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/username"/>

        <TextView
            android:id="@+id/password_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_user"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingTop="17dp"
            android:fontFamily="monospace"
            android:layout_below="@+id/email_user"/>

        <TextView
            android:id="@+id/confirm_password_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingTop="17dp"
            android:fontFamily="monospace"
            android:layout_below="@+id/password_user"/>

        <EditText
            android:id="@+id/user_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="your username"
            android:inputType="textPersonName"
            android:textSize="17sp"
            android:layout_below="@+id/register_text"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="user@example.com"
            android:inputType="textImeMultiLine|textEmailAddress"
            android:textSize="17sp"
            android:layout_below="@+id/username"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/pass_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="6-8 digit password"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:layout_alignTop="@+id/password_user"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="re-enter password"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:layout_below="@+id/password_user"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:id="@+id/register_button"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_register_button"
        android:background="@android:color/transparent"
        android:layout_marginBottom="127dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:text="@string/login_text"
        android:textSize="15dp"
        android:textStyle="bold" />

</RelativeLayout>
